--- a/index.html
+++ b/index.html
@@ -5,6 +5,156 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SocialMedia</title>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/54efc6e5b8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="nav-left">
+        <img src="images/logo.png" class="logo" />
+        <ul>
+          <li><img src="images/notification.png" /></li>
+          <li><img src="images/inbox.png" /></li>
+          <li><img src="images/video.png" /></li>
+        </ul>
+      </div>
+      <div class="nav-right">
+        <div class="search-box">
+          <img src="images/search.png" />
+          <input type="text" placeholder="Search" />
+        </div>
+        <div class="nav-user-icon online">
+          <img src="images/profile-pic.png" />
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <!-- left-sidebar----------------- -->
+      <div class="left-sidebar">
+        <div class="imp-links">
+          <a href="#"><img src="images/news.png" /> Latest News</a>
+          <a href="#"><img src="images/friends.png" /> Friends</a>
+          <a href="#"><img src="images/group.png" /> Group</a>
+          <a href="#"><img src="images/marketplace.png" /> Marketplace</a>
+          <a href="#"><img src="images/watch.png" /> Watch</a>
+          <a href="#">See More</a>
+        </div>
+
+        <div class="shortcut-links">
+          <p>Your Shortcuts</p>
+          <a href="#"><img src="images/shortcut-1.png" /> Web Developers</a>
+          <a href="#"><img src="images/shortcut-2.png" /> Web Design Course</a>
+          <a href="#"
+            ><img src="images/shortcut-3.png" /> Full Stack Development</a
+          >
+          <a href="#"><img src="images/shortcut-4.png" /> Website Expert</a>
+        </div>
+      </div>
+      <!-- main content----------------- -->
+      <div class="main-content">
+        <div class="story-gallery">
+          <div class="story story1">
+            <img src="images/upload.png" />
+            <p>Post Story</p>
+          </div>
+
+          <div class="story story2">
+            <img src="images/member-1.png" />
+            <p>Alison</p>
+          </div>
+
+          <div class="story story3">
+            <img src="images/member-2.png" />
+            <p>Mickael</p>
+          </div>
+
+          <div class="story story4">
+            <img src="images/member-3.png" />
+            <p>Siham</p>
+          </div>
+
+          <div class="story story5">
+            <img src="images/member-4.png" />
+            <p>Youssef</p>
+          </div>
+        </div>
+
+        <div class="write-post-container">
+          <div class="user-profile">
+            <img src="images/profile-pic.png" />
+            <div>
+              <p>John Nicholson</p>
+              <small>Public<i class="fas fa-caret-down"></i></small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- rigth-sidebar----------------- -->
+      <div class="rigth-sidebar">
+        <div class="sidebar-title">
+          <h4>Events</h4>
+          <a href="#">See All</a>
+        </div>
+        <div class="event">
+          <div class="left-event">
+            <h3>25</h3>
+            <span>May</span>
+          </div>
+          <div class="rigth-event">
+            <h4>Social Media</h4>
+            <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+
+        <div class="event">
+          <div class="left-event">
+            <h3>22</h3>
+            <span>June</span>
+          </div>
+          <div class="rigth-event">
+            <h4>Mobile Marketing</h4>
+            <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
+            <a href="#">More Info</a>
+          </div>
+        </div>
+        <div class="sidebar-title">
+          <h4>Advertisment</h4>
+          <a href="#">Close</a>
+        </div>
+
+        <img src="images/advertisement.png" class="sidebar-ads" />
+
+        <div class="sidebar-title">
+          <h4>Conversation</h4>
+          <a href="#">Hide Chat</a>
+        </div>
+
+        <div class="online-list">
+          <div class="online">
+            <img src="images/member-1.png" />
+          </div>
+          <p>Alison Mina</p>
+        </div>
+
+        <div class="online-list">
+          <div class="online">
+            <img src="images/member-2.png" />
+          </div>
+          <p>Mickael Ben</p>
+        </div>
+
+        <div class="online-list">
+          <div class="online">
+            <img src="images/member-3.png" />
+          </div>
+          <p>Siham Rose</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
